# pavo-bench

./: .gitignore  BLOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PAVO_TMLR_anonymous.tex  PAVO_TMLR_submission.tex  README.md  component_ablation_results.json  pyproject.toml  requirements.txt  tier1_coupling_results.json  tier1_llm_latency_results.json  tier1_statistical_results.json  tier2_cross_dataset_results.json  tier2_e2e_results.json  tier2_noise_robustness_results.json  tier3_50k_checkpoint.jsonl  tier3_50k_summary.json  tier3_scaling_results.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  reproduction_report.yml
.github/workflows/: validate.yml
data/: supervised_baseline_results.json
docs/: HF_DATASET_README.md
experiments/: exp1_e2e_pipeline.py  exp2_coupling_calibration.py  exp3_train_ppo.py  exp4_fix.py  exp4_real_ablation.py  exp5_upload.py  run_all_experiments.py  run_remaining.sh  setup.sh
experiments/outputs/: ablation_bertscore.json  ablation_results_real.json  coupling_results_200.json  meta_controller.pt  meta_controller_best.pt  training_log.json
experiments/outputs_new/: ablation_deberta.json  coupling_3models.json  e2e_librispeech.json  real_asr_coupling.json
experiments/scripts/supervised_baseline/: generate_data.py  output_table.py  run_ablation.py  train_eval.py
notebooks/: quickstart.ipynb
paper/: PAVO_TMLR_anonymous.tex  PAVO_TMLR_submission.tex  refs_pavo.bib
pavo_bench/: __init__.py  _profile_costs.py  coupling.py  dataset.py  evaluate.py  loader.py  model.py  routers.py  state.py
scripts/: apply_github_metadata.sh  render_figures.py
